src/App.css
#game {
	margin: 0 auto;
	padding: 2rem 2rem 0 2rem;
	height: 100vh;
	display: grid;
	grid-template-areas: 
		"options inventory"
		"choices reserves"
		"primary-textbox primary-textbox"
	;
	grid-template-rows: 2.5rem auto 12rem;
	overflow: hidden;
}

#game.dark {
	background-color: #000;
	color: #eee;
}

#background {
	position: absolute;
	left: 0;
	top: 0;
	min-width: 100%;
	height: 100%;
	object-fit: cover;
}

#game.dark #background {
	opacity: 0.5;
}

a {
	color: #3850B7;
}

#game.dark a {
	color: #8F9DDC;
}

#game.dark a:hover {
	color: #CCD1F0;
}

.button {
	border-color: #595959;
	box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1),0 0 0 .0625rem rgba(10,10,10,.02);
}

.button:hover {
	border-color: #000;
}

#game.dark .button {
	border-color: #eee;
	background-color: #333;
	color: #eee;
	box-shadow: 0 .5em 1em -.125em rgba(240,240,240,.1),0 0 0 .0625rem rgba(240,240,240,.02);
}

input[type="number"] {
	padding-right: 0;
}

.checkbox {
	display: block;
	margin: 1rem 0;
}

.checkbox input {
	margin-right: 0.25rem;
}

#game.dark .checkbox:hover, #game.dark .radio:hover {
	color: white;
}

#options-button {
	width: 6.5rem;
	grid-area: options;
}

#inventory-button {
	width: 6.5rem;
	grid-area: inventory;
	justify-self: end;
}

#choices-view {
	grid-area: choices;
	padding: 1rem 1rem 0 0;
	min-height: 15rem;
}

#choices-list {
	display: flex;
	flex-direction: column;
}

#choices-view button {
	margin-bottom: 1rem;
	max-width: 18rem;
}

#reserves {
	grid-area: reserves;
	padding: 1rem 0 0 1rem;
	display: flex;
	justify-content: flex-end;
}

#reserves .card {
	width: fit-content;
	height: fit-content;
	padding: 1rem;
}

#reserves output {
	display: block;
	text-align: right;
}

#sprite, #sprite-animation {
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
}

#game.dark #sprite {
	filter: brightness(0.8);
}

#sprite-animation {
	display: none;
}

@media (prefers-reduced-motion: no-preference) {
	#sprite-animation {
		display: block;
		opacity: 0;
		transition-property: opacity;
		transition-timing-function: ease-in-out;
		transition-duration: 0.5s;
	}
	#sprite-animation.visible {
		opacity: 1;
	}
}

#game.dark #sprite-animation {
	filter: brightness(0.7);
}

#primary-textbox {
	padding: 1rem;
	min-height: 7rem;
	border-radius: .25rem .25rem 0 0;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-end;
	grid-area: primary-textbox;
	z-index: 1;
}

#game.dark #primary-textbox {
	border-bottom-color: #111;
}

#game.dark .card {
	background-color: #111;
	color: #eee;
	border: 0.0625rem solid #eee;
}

#primary-textbox p {
	width: 100%;
}

#primary-textbox .next-button {
	width: 6rem;
	margin-top: 1rem;
}

.hidden-next-button {
	display: none;
}

.modal-content {
	max-width: calc(100% - 1rem);
}

#game.dark .modal-content .box {
	background-color: #111;
	color: #eee;
}

.modal-content li {
	font-weight: bold;
}

.modal-content ul ul {
	margin-bottom: 1rem;
}

.modal-content li ul li {
	margin-left: 1.5rem;
	font-weight: normal;
}

.item-icon {
	width: auto;
	max-width: 3rem;
	height: 3rem;
	margin-left: 1rem;
}

@media (max-width: 24rem) {
	#game {
		padding: 1rem;
	}
	#choices-view {
		padding: 1rem 0.5rem 0 0;
	}
	#reserves {
		padding: 1rem 0 0 0.5rem;
	}
}

